# dotnet-python-microservices

./: .gitignore  IMPLEMENTATION_SUMMARY.md  MicroservicesApp.sln  README.md
.aspire/: settings.json
JmHell.Database/: Extensions.cs  JmHell.Database.csproj  JmHellDbContext.cs  JmHellDesignTimeDbContextFactory.cs
JmHell.Database/Migrations/: 20260109234932_InitialCreate.Designer.cs  (+2 more)
JmHell.Worker/: JmHell.Worker.pyproj  main.py  messages_pb2.py  pyproject.toml
JmHell.Worker/message_handlers/: task_message_handler.py
JmHell.Worker/redis_thing/: message_handler.py  redis_listener.py
MicroservicesApp.ApiService/: MicroservicesApp.ApiService.csproj  MicroservicesApp.ApiService.http  Program.cs
MicroservicesApp.AppHost/: AppHost.cs  MicroservicesApp.AppHost.csproj
MicroservicesApp.Web/: MicroservicesApp.Web.csproj  Program.cs  WeatherApiClient.cs
PythonWorker/: main.py  messages_pb2.py  pyproject.toml  worker.py
PythonWorker/message_handlers/: __init__.py  task_message_handler.py
PythonWorker/python_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PythonWorker/redis_thing/: message_handler.py  redis_listener.py
Shared/: pyproject.toml
SourceGenerators/: ProtoMessageSourceGenerator.cs  Readme.md  SourceGeneratorWithAdditionalFiles.cs  SourceGeneratorWithAttributes.cs  SourceGenerators.csproj
SourceGenerators.Sample/: Examples.cs  SampleEntity.cs  SourceGenerators.Sample.csproj
SourceGenerators.Tests/: SourceGeneratorWithAdditionalFilesTests.cs  SourceGeneratorWithAttributesTests.cs  SourceGenerators.Tests.csproj
(+29 files in other folders)
