[project]
name = "python-worker"
version = "0.1.0"
description = "Python worker for processing tasks from Redis Stream"
requires-python = ">=3.12"

dependencies = [
    "redis>=5.2.1",
    "protobuf>=5.29.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["worker", "messages_pb2"]
